--- a/shivaansh/scss/_mixins.scss
+++ b/shivaansh/scss/_mixins.scss
@@ -120,3 +120,83 @@
   background: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
   background: linear-gradient($direction, $color-stops);
 }
+
+/*Responsiveness mixins*/
+// Media Queries Mixins
+$xxxs: 320px;
+$xxs: 480px;
+$xs: 640px; 
+$sm: 768px;
+$md: 1024px;
+$lg: 1280px;
+
+// Viewport down
+@mixin xxxs-down{
+    @media (max-width: #{$xxxs - 1px}){
+        @content;
+    }
+}
+@mixin xxs-down{
+    @media (max-width: #{$xxs - 1px}){
+        @content;
+    }
+}
+@mixin xs-down{
+    @media (max-width: #{$xs - 1px}){
+        @content;
+    }
+}
+@mixin sm-down{
+    @media (max-width: #{$sm - 1px}){
+        @content;
+    }
+}
+@mixin md-down{
+    @media (max-width: #{$md - 1px}){
+        @content;
+    }
+}
+@mixin lg-down{
+    @media (max-width: #{$lg - 1px}){
+        @content;
+    }
+}
+
+// Viewport only
+@mixin sm-only {
+    @media (min-width: #{$xs}) and (max-width: #{$sm - 1px}){
+        @content;
+    }  
+}
+@mixin md-only {
+    @media (min-width: #{$sm}) and (max-width: #{$md - 1px}){
+        @content;
+    }  
+}
+@mixin lg-only {
+    @media (min-width: #{$md}) and (max-width: #{$lg - 1px}){
+        @content;
+    }  
+}
+
+// Viewport Up
+@mixin xs-up{
+    @media (min-width: #{$xs}){
+        @content;
+    }
+}
+@mixin sm-up{
+    @media (min-width: #{$sm}){
+        @content;
+    }
+}
+@mixin md-up{
+    @media (min-width: #{$md}){
+        @content;
+    }
+}
+@mixin lg-up{
+    @media (min-width: #{$lg}){
+        @content;
+    }
+}
