--- a/shivaansh/scss/style.scss
+++ b/shivaansh/scss/style.scss
@@ -1,6 +1,26 @@
 /* All common stylesheet codes should come here */
 
 @import "global";
+.goToTop {
+    position: fixed;
+    right: -30%;
+    bottom: 15%;
+    z-index: 999;
+    background: #c1c1c1;
+    color: darken(#8a7b7b, 20%);
+    padding: 10px 12px;
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 700;
+    border-radius: 3px;
+    box-shadow: 0px 0px 15px -1px #1f1f1f;
+    cursor: pointer;
+    @include transition(all 0.45s);
+    &.active {
+        right: 15px;
+    }
+}
+
 header {
     position: absolute;
     top: 0;
@@ -10,22 +30,61 @@ header {
     z-index: 9999;
     @include transition(all 0.3s);
     .navbar-main {
-        .navbar-header {}
+        .navbar-header {
+            @include sm-down {
+                background: $color-base;
+            }
+            @include md-only {
+                display: none;
+            }
+            .navbar-toggle {
+                margin-bottom: 5px;
+                i {
+                    color: #ffffff;
+                    font-size: 2rem;
+                }
+            }
+            .navbar-brand {
+                padding: 5px 15px;
+                height: 60px;
+                a {
+                    display: block;
+                    img {
+                        height: 50px;
+                    }
+                }
+            }
+        }
         .navbar-collapse {
             padding: 0px;
             .navbar-nav {
                 width: 100%;
                 text-align: center;
+                @include sm-down {
+                    margin: 0px;
+                    text-align: left;
+                }
                 li {
-                    float: none;
-                    display: inline-block;
-                    width: 19%;
+                    @include sm-up {
+                        float: none;
+                        display: inline-block;
+                        width: 19%;
+                    }
                     a {
                         text-transform: uppercase;
                         color: $color-white;
+                        @include sm-down {
+                            background: $color-base;
+                        }
+                        &.exceptional {
+                            text-transform: none;
+                        }
                         &:hover,
                         &:focus {
                             background: transparent;
+                            @include sm-down {
+                                background: darken($color-yellow, 15%);
+                            }
                         }
                         &.logo {
                             img {
@@ -53,7 +112,7 @@ main {
             @include border-radius(100%);
             position: absolute;
             bottom: -50px;
-            left: 48%;
+            left: calc(50% - 50px);
         }
         &#about-us:after {
             background: #C1C1C1;
@@ -76,7 +135,6 @@ main {
     }
     .profile {
         position: relative;
-        top: -65px;
         img {
             width: 100px;
             height: 100px;
@@ -93,6 +151,10 @@ main {
             }
         }
         &.main {
+            top: -65px;
+            .profile-title {
+                margin-bottom: 0px;
+            }
             img {
                 width: 120px;
                 height: 120px;
@@ -107,6 +169,12 @@ main {
         background-size: cover;
         background-position: center center;
         color: $color-white;
+        @include sm-down {
+            .container:nth-child(2) {
+                width: 95%;
+                margin: 0 auto;
+            }
+        }
         .layer {
             width: 100%;
             height: 100%;
@@ -166,6 +234,9 @@ main {
         .profile-desc {
             width: 60%;
             margin: 0 auto;
+            @include sm-down {
+                width: 80%;
+            }
             p {
                 font-size: 1rem;
                 line-height: 1.5em;
@@ -179,6 +250,10 @@ main {
         background-position: top center;
         color: $color-white;
         #about-us {
+            @include sm-down {
+                width: 95%;
+                margin: 0 auto;
+            }
             .layer {
                 position: absolute;
                 width: 100%;
@@ -196,21 +271,43 @@ main {
                 padding-left: 70px;
                 padding-right: 50px;
                 padding-top: 50px;
+                @include sm-down {
+                    padding: 30px;
+                }
                 .section-title {
                     margin-bottom: 50px;
+                    @include md-down {
+                        text-align: center;
+                    }
                 }
                 p {
                     font-size: 1.2rem;
                     line-height: 1.25em;
+                    @include md-down {
+                        text-align: left;
+                    }
                 }
             }
             .ourTeam-section {
                 padding-left: 50px;
                 padding-right: 70px;
                 padding-top: 50px;
+                @include sm-down {
+                    padding: 30px;
+                }
+                .section-title {
+                    @include md-down {
+                        text-align: center;
+                    }
+                }
                 .list-members {
                     li {
                         margin-bottom: 20px;
+                        @include md-only {
+                            width: 50%;
+                            float: left;
+                            display: inline-block;
+                        }
                         .profile {
                             display: table-row;
                             img {
@@ -236,14 +333,86 @@ main {
             background-position: center center;
             padding: 30px;
             color: #515151;
+            @include sm-down {
+                width: 95%;
+                margin: 0 auto;
+            }
+            &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                background: rgba(193, 193, 193, 0.45);
+                height: 100%;
+                width: 100%;
+            }
             .section-title {
                 text-align: center;
+                position: relative;
             }
             .section-desc {
                 text-align: center;
                 width: 70%;
-                margin: 0 auto;
+                margin: 0 auto 30px;
                 font-size: 1.15rem;
+                position: relative;
+                @include md-only {
+                    width: 80%;
+                }
+                @include sm-down {
+                    width: 90%;
+                }
+            }
+            .section-accordion {
+                width: 70%;
+                margin: 0 auto;
+                padding: 0px 20px;
+                position: relative;
+                @include md-only {
+                    width: 80%;
+                }
+                @include sm-down {
+                    width: 100%;
+                    padding: 0px;
+                }
+                .panel {
+                    background: transparent;
+                    border: 0px;
+                    box-shadow: none;
+                    margin-bottom: 15px;
+                    .panel-heading {
+                        background: transparent;
+                        border: 0px;
+                        padding: 0px;
+                        h4 {
+                            a {
+                                display: block;
+                                padding: 10px 15px;
+                                text-decoration: none;
+                                color: darken(#8a7b7b, 20%);
+                                &:after {
+                                    @extend .font-awesome;
+                                    font-size: 1rem;
+                                    margin-left: 1em;
+                                }
+                                &[aria-expanded="true"]:after {
+                                    content: '\f056';
+                                }
+                                &.collapsed {
+                                    color: darken(#8a7b7b, 3%);
+                                }
+                            }
+                        }
+                    }
+                    .panel-body {
+                        border: 0px;
+                        color: darken(#8a7b7b, 20%);
+                        p {
+                            font-size: 1rem;
+                            line-height: 1.5em;
+                        }
+                    }
+                }
             }
         }
     }
@@ -255,6 +424,9 @@ footer#contact-us {
     background: $color-base;
     padding-top: 60px;
     padding-bottom: 120px;
+    @include md-down {
+        padding-bottom: 60px;
+    }
     .section-title {
         text-transform: uppercase;
         font-size: 1.4rem;
@@ -274,6 +446,10 @@ footer#contact-us {
         .form-section {
             padding-left: 70px;
             padding-right: 50px;
+            @include md-down {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
             input.form-control {
                 background: rgba(3, 11, 19, 0.5);
                 border: 0px;
@@ -292,6 +468,13 @@ footer#contact-us {
         .details-section {
             padding-left: 50px;
             padding-right: 70px;
+            @include md-down {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+            @include sm-down {
+                margin-top: 40px;
+            }
             h3 {
                 color: $color-white;
                 font-family: $roboto;
@@ -299,6 +482,13 @@ footer#contact-us {
                 margin: 0px;
                 font-size: 1rem;
                 margin-bottom: 15px;
+                &.mobile {
+                    @include md-only {
+                        float: left;
+                        display: inline-block;
+                        margin-right: 15px;
+                    }
+                }
                 a {
                     color: $color-white;
                     text-decoration: none;
