--- a/shivaansh/scss/_mixins.scss
+++ b/shivaansh/scss/_mixins.scss
@@ -33,7 +33,7 @@
 
 // Transform
 @mixin transform ($args) {
-  -webkit-tranform: $args;
+  -webkit-transform: $args;
   -moz-transform: $args;
   -ms-transform: $args;
   -o-transform: $args;
